# PlanetServe

./: .gitignore  CMakeLists.txt  LICENSE  README.md
configs/: demo_local.yaml
demo/: README.md  config.hpp  demo_model_node.cpp  demo_user_node.cpp  demo_verifier_node.cpp  message_types.hpp  relay_node.cpp  tendermint_client.hpp
eval/hrt+lb/: README.md  environment.yml  local_hrt_vllm.py  local_hrt_vllm_wo_lb.py  vanilla_vllm_v0.py
eval/hrt+lb/HashRadixTree/: HashRadixTree.py  ModelNode.py
eval/malicious_frac/: README.md  anon.py  conf.py
eval/prep_decry_lat/: README.md  run_and_visualize.sh  run_standalone_eval.sh  visualize_latency_cdf.py
eval/verification/: README.md  prompts.json  prompts_cb.json  prompts_ic.json  verify.py
eval/workload/: README.md  workload_measurer_online.py
planetllm_tendermint/: build.gradle
planetllm_tendermint/src/main/java/io/planetllm/: App.java  CredibilityApp.java
planetllm_tendermint/src/main/java/io/planetllm/config/: VerificationConfig.java
planetllm_tendermint/src/main/java/io/planetllm/epoch/: EpochManager.java
planetllm_tendermint/src/main/java/io/planetllm/llm/: LLMClient.java
planetllm_tendermint/src/main/java/io/planetllm/reputation/: ReputationManager.java
planetllm_tendermint/src/main/java/io/planetllm/verification/: PerplexityCalculator.java
scripts/: run_full_demo.sh
src/encrypt_p2p/: crypto_utils.hpp  ida.hpp  key_generation.hpp  network_handler.hpp  rabin_ida.hpp  s_ida.hpp
src/llm/: llama_server_client.hpp  llama_wrapper.cpp  llama_wrapper.hpp
src/node/: model_node.cpp  tendermint_client.hpp  user_node.cpp  verification_node.cpp  verification_node.hpp  verification_node_main.cpp
tests/: test_model_prepare_standalone.cpp
